# Kurtis-E1-MLX-Voice-Agent

./: .pre-commit-config.yaml  README.md  pyproject.toml
kurtis_mlx/: __main__.py  config.py  handlers.py  sip_client.py  ui.py
kurtis_mlx/utils/: llm.py  sound.py  stt.py  tts.py  vad.py
kurtis_mlx/workers/: mic.py  sip.py  sound.py  tts.py
