[project]
name = "kurtis_mlx"
version = "0.1.0"
description = "Kurtis E1 MLX - Voice Assistant"
readme = "README.md"
requires-python = ">=3.11.11"
dependencies = [
    "click>=8.1.8",
    "coqui-tts>=0.24.3",
    "librosa>=0.11.0",
    "mlx-lm>=0.28.3",
    "mlx-whisper>=0.4.2",
    "nltk>=3.9.1",
    "openai>=1.68.2",
    "pyvoip>=1.6.8",
    "resampy>=0.4.3",
    "rich>=14.2.0",
    "scipy>=1.15.2",
    "sounddevice>=0.5.1",
    "webrtcvad-wheels>=2.0.14",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "pre-commit>=4.0.1",
    "ruff>=0.7.3",
]

[tool.uv.sources]
pyvoip = { git = "https://github.com/tayler6000/pyVoIP.git" }
